--- a/React js course/oddeven.html
+++ b/React js course/oddeven.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
+ <head>
     <script src="react.js"></script>
     <script src="ReactDOM.js"></script>
     <script src="babel.js"></script>
   </head>
+  <style>
+    body {
+      background-color: aqua;
+
+    }
+    button{
+      background-color: antiquewhite;
+      color: blueviolet;
+    }
+    input{
+      background-color: antiquewhite;
+    }
+    
+  </style>
   <body>
     <div id="root"></div>
     <script type="text/babel">
-      function fn() {
-        var n1 = document.querySelector('#root > div > p:nth-child(1) > input').value;
-        var isEven = n1 % 2 === 0;
-
-        if (isEven) {
-          document.querySelector('#root > div > h1').innerText = `is even`;
-          document.querySelector('#root > div > h1').style.color = 'green';
-        } else {
-          document.querySelector('#root > div > h1').innerText = `${n1} is odd`;
-          document.querySelector('#root > div > h1').style.color = 'red';
-        }
-      }
 
       function App() {
+        var n1ref=React.useRef();
+        //var n2ref=React.useRef();
+       // var resRef=React.useRef();
+        
+        function fn() {
+          console.log(n1ref)
+          const n1 = parseInt(n1ref.current.value);
+
+          //var n1 = n1ref.current.value
+          const isEven = n1 % 2 === 0;
+          const isOdd = n1 % 2 !== 0;
+          //const result = n1ref.current.nextSibling;
+          n1ref.current.innerText = isEven ? `${n1} is even` : `${n1} is odd`;
+          n1ref.current.style.color = isEven ? 'green' : 'red';
+  
+  
+        /*  if (isEven) {
+            n1ref.current.innerText = `${n1} is even`;
+            n1ref.current.style.color = 'green';
+          } 
+          if(isOdd){
+            n1ref.current.innerText = `${n1} is odd`;
+            n1ref.current.style.color = 'red';
+          } */
+        }
         return (
           <div>
             <p>
               <b>Number:</b>
-              <input />
+              <input ref={n1ref}/>
             </p>
             <button onClick={fn}>Check Even/Odd</button>
             <h1></h1>
